--- a/src/templates/landing-news/landing-news.html
+++ b/src/templates/landing-news/landing-news.html
@@ -48,7 +48,7 @@
                                 <img src="public/images/cover3.jpg" alt="">
                             </div>
                             <div class="news-title">
-                                <h3>We and only me</h3>
+                                <h3>We and only we</h3>
                                 <p class="subtitle">A book about a couple.. of things.</p>
                             </div>
                         </div>
