--- a/src/styl/_common.styl
+++ b/src/styl/_common.styl
@@ -1,6 +1,7 @@
 body
     font-family: font-family
-    // overflow: hidden
+    overflow-y: scroll
+    position: fixed
 *::selection
     color: white
     background-color: selection-color
