--- a/src/styl/pages/app/_news.styl
+++ b/src/styl/pages/app/_news.styl
@@ -1,7 +1,6 @@
 .landing-news
     background-color: white
     z-index: 1
-    cursor: pointer;
     display: inline-block;
     position: absolute;
     width: -webkit-calc(100% - 590px)
@@ -9,21 +8,40 @@
     right: 30px
     top: 100%
     &.animate
+        cursor: pointer;
+        .wrapper
+            .news-list
+                pointer-events: none
         &:hover
             .floater
                 top: -60px
     .wrapper
         position: relative;
         top: -200px;
+        &::before
+            content: ""
+            display: inline-block;
+            width: 100%
+            height: 200px
+            position: absolute;
+            top: 0
+            left: 0
+            background-color: font-color
     .background-text
+        pointer-events: none;
         position: absolute;
         color: white
         display: inline-block;
         width: 100%
         height: 200px
+        &.fixed
+            width: -webkit-calc(100% - 590px)
+            width: calc(100% - 590px)
+            position: fixed;
         h2
+            text-align: center
             display: inline-block;
-            z-index: 2
+            z-index: 1
             position: absolute;
             top: 50%
             left: 50%
@@ -94,18 +112,13 @@
                 img
                     width: 100%
             .news-title
+                display: inline-block;
+                background-color: white
                 h3
                     font-size: font-size-smaller
                     text-transform: uppercase;
                     margin-bottom: 0
-                    background-color: white
-                    display: inline-block;
-                    float: left;
-                    clear: both
                 p.subtitle
                     font-size: font-size-small
                     color: font-color2
-                    background-color: white
-                    display: inline-block;
-                    float: left;
-                    clear: both
+                    margin-bottom: 0
